log
vi., 21 de mar. de 2025 20:14:09: 
 exercises.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
3f6cb15
vi., 21 de mar. de 2025 20:19:09: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
8e6a3f2
vi., 21 de mar. de 2025 20:22:17: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|1
total_score: 50/70
ef32470
vi., 21 de mar. de 2025 20:24:30: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
0c63b29
vi., 21 de mar. de 2025 21:01:55: 
 exercises.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
ead2023
vi., 21 de mar. de 2025 21:27:02: 
 exercises.c | 23 +++++++++++++++++++----
 1 file changed, 19 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:143:21: error: comparison between pointer and integer [-Werror]
       if ((top(pila)== ')' || top(pila)=='(') && (cadena[i] !=')' || cadena[i]!='('))
                     ^~
exercises.c:143:40: error: comparison between pointer and integer [-Werror]
       if ((top(pila)== ')' || top(pila)=='(') && (cadena[i] !=')' || cadena[i]!='('))
                                        ^~
exercises.c:148:26: error: comparison between pointer and integer [-Werror]
       else if ((top(pila)== '}' || top(pila)=='{') && (cadena[i] !='}' || cadena[i]!='{'))
                          ^~
exercises.c:148:45: error: comparison between pointer and integer [-Werror]
       else if ((top(pila)== '}' || top(pila)=='{') && (cadena[i] !='}' || cadena[i]!='{'))
                                             ^~
exercises.c:153:26: error: comparison between pointer and integer [-Werror]
       else if ((top(pila)== ']' || top(pila)=='[') && (cadena[i] !=']' || cadena[i]!='['))
                          ^~
exercises.c:153:45: error: comparison between pointer and integer [-Werror]
       else if ((top(pila)== ']' || top(pila)=='[') && (cadena[i] !=']' || cadena[i]!='['))
                                             ^~
cc1.exe: all warnings being treated as errors
Compilation failed
c78e672
vi., 21 de mar. de 2025 21:27:53: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:143:28: error: comparison between pointer and integer [-Werror]
       if (((char*)top(pila)== ')' || (char*)top(pila)=='(') && (cadena[i] !=')' || cadena[i]!='('))
                            ^~
exercises.c:143:54: error: comparison between pointer and integer [-Werror]
       if (((char*)top(pila)== ')' || (char*)top(pila)=='(') && (cadena[i] !=')' || cadena[i]!='('))
                                                      ^~
exercises.c:148:33: error: comparison between pointer and integer [-Werror]
       else if (((char*)top(pila)== '}' || (char*)top(pila)=='{') && (cadena[i] !='}' || cadena[i]!='{'))
                                 ^~
exercises.c:148:59: error: comparison between pointer and integer [-Werror]
       else if (((char*)top(pila)== '}' || (char*)top(pila)=='{') && (cadena[i] !='}' || cadena[i]!='{'))
                                                           ^~
exercises.c:153:33: error: comparison between pointer and integer [-Werror]
       else if (((char*)top(pila)== ']' || (char*)top(pila)=='[') && (cadena[i] !=']' || cadena[i]!='['))
                                 ^~
exercises.c:153:59: error: comparison between pointer and integer [-Werror]
       else if (((char*)top(pila)== ']' || (char*)top(pila)=='[') && (cadena[i] !=']' || cadena[i]!='['))
                                                           ^~
cc1.exe: all warnings being treated as errors
Compilation failed
414f40c
vi., 21 de mar. de 2025 21:28:33: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|1
total_score: 50/70
10ca6c7
vi., 21 de mar. de 2025 21:31:38: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
59c8562
vi., 21 de mar. de 2025 21:37:56: 
 exercises.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  7|1
total_score: 60/70
71ec38e
vi., 21 de mar. de 2025 21:40:01: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
c4870cb
vi., 21 de mar. de 2025 21:40:42: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
f194370
vi., 21 de mar. de 2025 21:44:17: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
6a62d36
vi., 21 de mar. de 2025 21:45:20: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
e989f04
vi., 21 de mar. de 2025 21:49:03: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
280b339
vi., 21 de mar. de 2025 21:51:40: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|1
total_score: 50/70
4d4c83b
vi., 21 de mar. de 2025 21:52:07: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
85240e3
